--- a/web/src/index.css
+++ b/web/src/index.css
@@ -5,3 +5,30 @@
 .main-home{
     background: radial-gradient(circle at center bottom, #fff 0%, #f5f5f5 50%, #c8c8c8 100%);
 }
+
+@keyframes slideToLeft {
+    0% {
+        transform: translateX(100%);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+
+@keyframes slideToRight {
+    0% {
+        transform: translateX(-100%);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
+.slide-left {
+    animation: slideToLeft 0.6s ease-in-out;
+}
+
+.slide-right {
+    animation: slideToRight 0.6s ease-in-out;
+}
